--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts --exec ts-node",
     "build": "tsc",
-    "start": "tsc && node dist/app.js"
+    "start": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
