--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
+    "generate" : "npx prisma generate",
+    "migrate" : "npx prisma migrate dev", 
+    "dbpush" : "npx prisma db push",
+    "local-studio" : "npx prisma studio",
     "dev": "nodemon src/index.ts --exec ts-node",
     "build": "tsc",
     "start": "tsc && node dist/index.js"
@@ -13,10 +17,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "pg": "^8.17.2",
     "ws": "^8.18.3"
   },
   "devDependencies": {
@@ -24,8 +31,10 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.11",
+    "prisma": "^7.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
