--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "generate" : "npx prisma generate",
-    "migrate" : "npx prisma migrate dev", 
-    "dbpush" : "npx prisma db push",
-    "local-studio" : "npx prisma studio",
+    "p_generate": "npx prisma generate",
+    "p_migrate": "npx prisma migrate dev",
+    "p_dbpush": "npx prisma db push",
+    "p_studio": "npx prisma studio",
     "dev": "nodemon src/index.ts --exec ts-node",
     "build": "tsc",
     "start": "tsc && node dist/index.js"
@@ -24,7 +24,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.17.2",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
