--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "p_studio": "npx prisma studio",
     "dev": "nodemon src/index.ts --exec ts-node",
     "build": "tsc",
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/src/index.js"
   },
   "keywords": [],
   "author": "",
